--- a/PokemonStore/PokemonStore.Web/PokemonStore.Web.csproj
+++ b/PokemonStore/PokemonStore.Web/PokemonStore.Web.csproj
@@ -1022,6 +1022,8 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="App_Start\WireupModule.cs" />
     <Compile Include="Components\ApplicationContext.cs" />
+    <Compile Include="Components\EmailSettingsProvider.cs" />
+    <Compile Include="Components\SendMailProvider.cs" />
     <Compile Include="Controllers\Api\BaseApiController.cs" />
     <Compile Include="Controllers\Api\OrderController.cs" />
     <Compile Include="Global.asax.cs">
@@ -1042,6 +1044,7 @@
     <Content Include="Views\_PageStart.cshtml" />
     <Content Include="Views\OrdersList.cshtml" />
     <Content Include="Views\OrdersFeed.cshtml" />
+    <Content Include="Views\Shared\Error.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
